Edit Todo Form show only user

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <form id="form-task-input">
+  <form hidden id="form-task-input">
     <input id="tast-text" type="text">
     <button>ADD</button>
   </form>
