--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
@@ -55,8 +55,8 @@
     firebase.initializeApp(config);
   </script>
 
-  <script src="firebase.js"></script>
-  <script src="app.js"></script>
+  <script src="/js/firebase.js"></script>
+  <script src="/js/app.js"></script>
 
 </body>
 </html>
